--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,64 @@
-.App {
-  text-align: center;
+body {
+  background-color: #F4D04E;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.learning-card {
+  width: 360px;
+  height: 498px;
+  background-color: #FFFFFF;
+  margin: 20vh 40vw 20vh 40vw;
+  border-radius: 20px;
+  box-shadow: 10px 10px 10px #111111;
+  padding: 24px;
+  font-family: "Figtree", sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.illustration {
+  width: 360px;
+  height: auto;
+  border-radius: 20px;
+  margin-bottom: 22px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.learning-tab {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  width: 82px;
+  height: 29px;
+  background-color: #F4D04E;
+  border-radius: 5px;
+  margin-bottom: 12px;
 }
 
-.App-link {
-  color: #61dafb;
+.learning-tab p {
+  font-weight: bold;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.learning-card h2:hover {
+  color: #F4D04E;
+}
+
+.learning-card p, h2 {
+  margin-bottom: 12px;
+}
+
+.learning-card p {
+  font-size: 16px;
+}
+
+.greg-cont {
+  margin-top: 24px;
+  display: flex;
+  align-items: center;
+}
+
+.Greg {
+  width: 35px;
+  height: 35px;
+  margin-right: 5px;
+}
+
+.greg-cont p {
+  font-weight: bold;
 }
